--- a/AUTHORS
+++ b/AUTHORS
@@ -1,6 +1,4 @@
-Questions to:
-Mate Keyring Mailing List <mate-keyring-list@gnome.org>
-
-Main authors:
+Perberos <perberos@gmail.com>
+Steve Zesch <stevezesch2@gmail.com>
+Stefano Karapetsas <stefano@karapetsas.com>
 Stef Walter <stef@memberwebs.com>
-
