--- a/po/es_CL.po
+++ b/po/es_CL.po
@@ -3,54 +3,54 @@
 # This file is distributed under the same license as the PACKAGE package.
 # 
 # Translators:
-# Bruce Cowan <bcowan@fastmail.co.uk>, 2010.
+# Pablo Lezaeta <prflr88@gmail.com>, 2012.
 msgid ""
 msgstr ""
 "Project-Id-Version: MATE Desktop Environment\n"
 "Report-Msgid-Bugs-To: https://github.com/mate-desktop/\n"
 "POT-Creation-Date: 2012-06-28 16:07+0200\n"
-"PO-Revision-Date: 2012-02-22 14:51+0000\n"
-"Last-Translator: Stefano Karapetsas <stefano@karapetsas.com>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
+"PO-Revision-Date: 2012-06-03 08:45+0000\n"
+"Last-Translator: Pablo Lezaeta <prflr88@gmail.com>\n"
+"Language-Team: Spanish (Chile) (http://www.transifex.com/projects/p/MATE/language/es_CL/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: en_GB\n"
+"Language: es_CL\n"
 "Plural-Forms: nplurals=2; plural=(n != 1)\n"
 
 #: ../library/mate-keyring-utils.c:100
 msgid "Access Denied"
-msgstr "Access Denied"
+msgstr "Acceso denegado"
 
 #: ../library/mate-keyring-utils.c:102
 msgid "The mate-keyring-daemon application is not running."
-msgstr "The mate-keyring-daemon application is not running."
+msgstr "El demonio de mate-keyring-daemon no está corriendo."
 
 #: ../library/mate-keyring-utils.c:104
 msgid "Error communicating with mate-keyring-daemon"
-msgstr "Error communicating with mate-keyring-daemon"
+msgstr "Error al comunicarse con mate-keyring-daemon"
 
 #: ../library/mate-keyring-utils.c:106
 msgid "A keyring with that name already exists"
-msgstr "A keyring with that name already exists"
+msgstr "Ya existe una llave con ese nombre"
 
 #: ../library/mate-keyring-utils.c:108
 msgid "Programmer error: The application sent invalid data."
-msgstr "Programmer error: The application sent invalid data."
+msgstr "Error del programa: La aplicación envio datos inválidos"
 
 #: ../library/mate-keyring-utils.c:110
 msgid "No matching results"
-msgstr "No matching results"
+msgstr "No hay resultados"
 
 #: ../library/mate-keyring-utils.c:112
 msgid "A keyring with that name does not exist."
-msgstr "A keyring with that name does not exist."
+msgstr "No existe una llave con ese nombre."
 
 #: ../library/mate-keyring-utils.c:119
 msgid "The keyring has already been unlocked."
-msgstr "The keyring has already been unlocked."
+msgstr "La llave ya ha sido desbloqueada."
 
 #. TRANSLATORS: This is the name of an automatically created default keyring.
 #: ../library/mate-keyring.c:2790
 msgid "Default"
-msgstr "Default"
+msgstr "Por defecto"
