--- a/po/fa.po
+++ b/po/fa.po
@@ -1,24 +1,24 @@
-# Persian translation for libmate-keyring.
-# Copyright (C) 2010 IFSUG Translation Group
-# This file is distributed under the same license as the libmate-keyring package.
+# SOME DESCRIPTIVE TITLE.
+# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
+# This file is distributed under the same license as the PACKAGE package.
+# 
+# Translators:
 # Arash Mousavi <mousavi.arash@gmail.com>, 2010.
-# Mostafa Mostafa <lashar@fedoraproject.org>, 2010.
 # Mahyar Moghimi <mahyar.moqimi@gmail.com>, 2010.
-#
+# Mostafa Mostafa <lashar@fedoraproject.org>, 2010.
 msgid ""
 msgstr ""
-"Project-Id-Version: libmate-keyring master\n"
-"Report-Msgid-Bugs-To: http://bugzilla.gnome.org/enter_bug.cgi?product=mate-keyring&component=libmate-keyring\n"
-"POT-Creation-Date: 2010-10-29 20:34+0000\n"
-"PO-Revision-Date: 2010-11-03 12:36+0330\n"
-"Last-Translator: Mahyar Moghimi <mahyar.moqimi@gmail.com>\n"
-"Language-Team: Persian <translate@ifsug.org>\n"
+"Project-Id-Version: MATE Desktop Environment\n"
+"Report-Msgid-Bugs-To: https://github.com/mate-desktop/\n"
+"POT-Creation-Date: 2012-06-28 16:07+0200\n"
+"PO-Revision-Date: 2012-02-22 14:51+0000\n"
+"Last-Translator: Stefano Karapetsas <stefano@karapetsas.com>\n"
+"Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Poedit-Language: Persian\n"
-"X-Poedit-Country: IRAN\n"
-"X-Poedit-SourceCharset: utf-8\n"
+"Language: fa\n"
+"Plural-Forms: nplurals=1; plural=0\n"
 
 #: ../library/mate-keyring-utils.c:100
 msgid "Access Denied"
@@ -53,7 +53,6 @@ msgid "The keyring has already been unlocked."
 msgstr "جا کلیدی قبلا باز شده است."
 
 #. TRANSLATORS: This is the name of an automatically created default keyring.
-#: ../library/mate-keyring.c:2819
+#: ../library/mate-keyring.c:2790
 msgid "Default"
 msgstr "پیش فرض"
-
