--- a/po/lt.po
+++ b/po/lt.po
@@ -1,22 +1,22 @@
-# translation of lt.po to Lithuanian
-# Lithuanian translation of libmate-keyring
-# Copyright (C) 2010 The MATE Foundation.
-# This file is distributed under the same license as the libmate-keyring package.
-#
-# Gintautas Miliauskas <gintas@akl.lt>, 2010
+# SOME DESCRIPTIVE TITLE.
+# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
+# This file is distributed under the same license as the PACKAGE package.
+# 
+# Translators:
+# Gintautas Miliauskas <gintas@akl.lt>, 2010.
 msgid ""
 msgstr ""
-"Project-Id-Version: libmate-keyring-2.29.4\n"
-"Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2010-03-03 12:02+0200\n"
-"PO-Revision-Date: 2010-03-03 12:02+0200\n"
-"Last-Translator: Gintautas Miliauskas <gintautas@miliauskas.lt>\n"
-"Language-Team: Lithuanian <mate-lt@lists.akl.lt>\n"
+"Project-Id-Version: MATE Desktop Environment\n"
+"Report-Msgid-Bugs-To: https://github.com/mate-desktop/\n"
+"POT-Creation-Date: 2012-06-28 16:07+0200\n"
+"PO-Revision-Date: 2012-02-22 14:50+0000\n"
+"Last-Translator: Stefano Karapetsas <stefano@karapetsas.com>\n"
+"Language-Team: Lithuanian (http://www.transifex.com/projects/p/MATE/language/lt/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && (n%"
-"100<10 || n%100>=20) ? 1 : 2);\n"
+"Language: lt\n"
+"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && (n%100<10 || n%100>=20) ? 1 : 2)\n"
 
 #: ../library/mate-keyring-utils.c:100
 msgid "Access Denied"
@@ -51,6 +51,6 @@ msgid "The keyring has already been unlocked."
 msgstr "Raktinė jau atrakinta."
 
 #. TRANSLATORS: This is the name of an automatically created default keyring.
-#: ../library/mate-keyring.c:2685
+#: ../library/mate-keyring.c:2790
 msgid "Default"
 msgstr "Numatytoji"
