--- a/po/ml.po
+++ b/po/ml.po
@@ -1,20 +1,22 @@
-# malayalam Translation of libmate-keyring.master.po
-# Copyright (C) 2010 libmate-keyring'S COPYRIGHT HOLDER
+# SOME DESCRIPTIVE TITLE.
+# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
+# 
+# Translators:
 # Jaisen Nedumpala <jaisuvyas@gmail.com>, 2010.
-#
 msgid ""
 msgstr ""
-"Project-Id-Version: libmate-keyring trunk\n"
-"Report-Msgid-Bugs-To: http://bugzilla.gnome.org/enter_bug.cgi?product=mate-"
-"keyring&component=libmate-keyring\n"
-"POT-Creation-Date: 2010-02-26 11:33+0000\n"
-"PO-Revision-Date: 2010-02-27 16:26+0530\n"
-"Last-Translator: Jaisen Nedumpala <jaisuvyas@gmail.com>\n"
-"Language-Team: SMC <smc-discuss@googlegroups.com>\n"
+"Project-Id-Version: MATE Desktop Environment\n"
+"Report-Msgid-Bugs-To: https://github.com/mate-desktop/\n"
+"POT-Creation-Date: 2012-06-28 16:07+0200\n"
+"PO-Revision-Date: 2012-02-22 14:51+0000\n"
+"Last-Translator: Stefano Karapetsas <stefano@karapetsas.com>\n"
+"Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=utf-8\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Language: ml\n"
+"Plural-Forms: nplurals=2; plural=(n != 1)\n"
 
 #: ../library/mate-keyring-utils.c:100
 msgid "Access Denied"
@@ -49,6 +51,6 @@ msgid "The keyring has already been unlocked."
 msgstr "താക്കോല്‍ക്കൂട്ടം മുമ്പെ തന്നെ തുറന്നിട്ടുണ്ടു്."
 
 #. TRANSLATORS: This is the name of an automatically created default keyring.
-#: ../library/mate-keyring.c:2685
+#: ../library/mate-keyring.c:2790
 msgid "Default"
 msgstr "സഹജമായ"
