--- a/po/pt.po
+++ b/po/pt.po
@@ -1,39 +1,43 @@
-# libmate-keyring's Portuguese translation.
-# Copyright © 2010 libmate-keyring
-# This file is distributed under the same license as the libmate-keyring package.
+# SOME DESCRIPTIVE TITLE.
+# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
+# This file is distributed under the same license as the PACKAGE package.
+# 
+# Translators:
 # Duarte Loreto <happyguy_pt@hotmail.com>, 2010.
-#
+# Sérgio Marques <smarquespt@gmail.com>, 2012.
 msgid ""
 msgstr ""
-"Project-Id-Version: 2.30\n"
-"Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2010-03-09 00:50+0000\n"
-"PO-Revision-Date: 2010-03-09 00:50+0000\n"
-"Last-Translator: Duarte Loreto <happyguy_pt@hotmail.com>\n"
-"Language-Team: Portuguese <mate_pt@yahoogroups.com>\n"
+"Project-Id-Version: MATE Desktop Environment\n"
+"Report-Msgid-Bugs-To: https://github.com/mate-desktop/\n"
+"POT-Creation-Date: 2012-06-28 16:07+0200\n"
+"PO-Revision-Date: 2012-05-21 14:01+0000\n"
+"Last-Translator: Sérgio Marques <smarquespt@gmail.com>\n"
+"Language-Team: Portuguese (http://www.transifex.com/projects/p/MATE/language/pt/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Language: pt\n"
+"Plural-Forms: nplurals=2; plural=(n != 1)\n"
 
 #: ../library/mate-keyring-utils.c:100
 msgid "Access Denied"
-msgstr "Acesso Negado"
+msgstr "Acesso negado"
 
 #: ../library/mate-keyring-utils.c:102
 msgid "The mate-keyring-daemon application is not running."
-msgstr "A aplicação mate-keyring-daemon não se encontra em execução."
+msgstr "A aplicação mate-keyring-daemon não está em execução."
 
 #: ../library/mate-keyring-utils.c:104
 msgid "Error communicating with mate-keyring-daemon"
-msgstr "Erro ao comunicar com o mate-keyring-daemon"
+msgstr "Erro ao comunicar com o serviço mate-keyring"
 
 #: ../library/mate-keyring-utils.c:106
 msgid "A keyring with that name already exists"
-msgstr "Já existe um chaveiro com esse nome"
+msgstr "Já existe um chaveiro com este nome"
 
 #: ../library/mate-keyring-utils.c:108
 msgid "Programmer error: The application sent invalid data."
-msgstr "Erro de programação: A aplicação enviou dados inválidos."
+msgstr "Erro de programação: a aplicação enviou dados inválidos."
 
 #: ../library/mate-keyring-utils.c:110
 msgid "No matching results"
@@ -41,13 +45,13 @@ msgstr "Nenhum resultado coincidente"
 
 #: ../library/mate-keyring-utils.c:112
 msgid "A keyring with that name does not exist."
-msgstr "Não existe um chaveiro com esse nome."
+msgstr "Não existe um chaveiro com este nome."
 
 #: ../library/mate-keyring-utils.c:119
 msgid "The keyring has already been unlocked."
-msgstr "O chaveiro já foi destrancado."
+msgstr "O chaveiro já foi desbloqueado."
 
 #. TRANSLATORS: This is the name of an automatically created default keyring.
-#: ../library/mate-keyring.c:2685
+#: ../library/mate-keyring.c:2790
 msgid "Default"
-msgstr "Omissão"
+msgstr "Pré-definido"
