--- a/po/sr.po
+++ b/po/sr.po
@@ -1,22 +1,23 @@
-# Serbian translation of libmate-keyring.
-# Copyright (C) 2010.
-# This file is distributed under the same license as the libmate-keyring package.
-#
+# SOME DESCRIPTIVE TITLE.
+# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
+# This file is distributed under the same license as the PACKAGE package.
+# 
+# Translators:
 # Miloš Popović <gpopac@gmail.com>, 2010.
 # Милош Поповић <gpopac@gmail.com>, 2010.
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: libmate-keyring\n"
-"Report-Msgid-Bugs-To: http://bugzilla.gnome.org/enter_bug.cgi?product=mate-"
-"keyring&component=libmate-keyring\n"
-"POT-Creation-Date: 2010-03-23 01:55+0000\n"
-"PO-Revision-Date: 2010-03-25 17:58+0100\n"
-"Last-Translator: Милош Поповић <gpopac@gmail.com>\n"
-"Language-Team: Serbian <mate@prevod.org>\n"
+"Project-Id-Version: MATE Desktop Environment\n"
+"Report-Msgid-Bugs-To: https://github.com/mate-desktop/\n"
+"POT-Creation-Date: 2012-06-28 16:07+0200\n"
+"PO-Revision-Date: 2012-02-22 14:50+0000\n"
+"Last-Translator: Stefano Karapetsas <stefano@karapetsas.com>\n"
+"Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Language: sr\n"
+"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2)\n"
 
 #: ../library/mate-keyring-utils.c:100
 msgid "Access Denied"
@@ -51,6 +52,6 @@ msgid "The keyring has already been unlocked."
 msgstr "Привезак је већ откључан."
 
 #. TRANSLATORS: This is the name of an automatically created default keyring.
-#: ../library/mate-keyring.c:2717
+#: ../library/mate-keyring.c:2790
 msgid "Default"
 msgstr "Подразумевани"
