--- a/po/sv.po
+++ b/po/sv.po
@@ -1,19 +1,22 @@
-# Swedish translation for libmate-keyring.
-# Copyright (C) 2010 Free Software Foundation, Inc.
-# This file is distributed under the same license as the libmate-keyring package.
+# SOME DESCRIPTIVE TITLE.
+# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
+# This file is distributed under the same license as the PACKAGE package.
+# 
+# Translators:
 # Daniel Nylander <po@danielnylander.se>, 2010.
-#
 msgid ""
 msgstr ""
-"Project-Id-Version: libmate-keyring\n"
-"Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2010-02-26 12:31+0100\n"
-"PO-Revision-Date: 2010-02-26 12:33+0100\n"
-"Last-Translator: Daniel Nylander <po@danielnylander.se>\n"
-"Language-Team: Swedish <tp-sv@listor.tp-sv.se>\n"
+"Project-Id-Version: MATE Desktop Environment\n"
+"Report-Msgid-Bugs-To: https://github.com/mate-desktop/\n"
+"POT-Creation-Date: 2012-06-28 16:07+0200\n"
+"PO-Revision-Date: 2012-02-22 14:51+0000\n"
+"Last-Translator: Stefano Karapetsas <stefano@karapetsas.com>\n"
+"Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=utf-8\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Language: sv\n"
+"Plural-Forms: nplurals=2; plural=(n != 1)\n"
 
 #: ../library/mate-keyring-utils.c:100
 msgid "Access Denied"
@@ -48,7 +51,6 @@ msgid "The keyring has already been unlocked."
 msgstr "Nyckelringen har redan låsts upp."
 
 #. TRANSLATORS: This is the name of an automatically created default keyring.
-#: ../library/mate-keyring.c:2685
+#: ../library/mate-keyring.c:2790
 msgid "Default"
 msgstr "Standard"
-
