--- a/po/uk.po
+++ b/po/uk.po
@@ -1,19 +1,22 @@
-# Ukrainian translation of libmate-keyring.
-# Copyright (C) 2010 Free Software Foundation, Inc.
+# SOME DESCRIPTIVE TITLE.
+# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
-# Maxim Dziumanenko <dziumanenko@gmail.com>, 2010
-#
+# 
+# Translators:
+# Maxim Dziumanenko <dziumanenko@gmail.com>, 2010.
 msgid ""
 msgstr ""
-"Project-Id-Version: libmate-keyring\n"
-"Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2010-03-26 16:36+0200\n"
-"PO-Revision-Date: 2010-03-26 16:33+0300\n"
-"Last-Translator: Maxim V. Dziumanenko <dziumanenko@gmail.com>\n"
-"Language-Team: Ukrainian <trans-uk@lists.fedoraproject.org>\n"
+"Project-Id-Version: MATE Desktop Environment\n"
+"Report-Msgid-Bugs-To: https://github.com/mate-desktop/\n"
+"POT-Creation-Date: 2012-06-28 16:07+0200\n"
+"PO-Revision-Date: 2012-02-22 14:51+0000\n"
+"Last-Translator: Stefano Karapetsas <stefano@karapetsas.com>\n"
+"Language-Team: Ukrainian (http://www.transifex.com/projects/p/MATE/language/uk/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Language: uk\n"
+"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2)\n"
 
 #: ../library/mate-keyring-utils.c:100
 msgid "Access Denied"
@@ -48,6 +51,6 @@ msgid "The keyring has already been unlocked."
 msgstr "В'язка ключів вже розблокована."
 
 #. TRANSLATORS: This is the name of an automatically created default keyring.
-#: ../library/mate-keyring.c:2717
+#: ../library/mate-keyring.c:2790
 msgid "Default"
 msgstr "Основна"
