--- a/po/vi.po
+++ b/po/vi.po
@@ -1,21 +1,22 @@
-# Vietnamese translation for libmate-keyring
-# Copyright (c) 2010 Rosetta Contributors and Canonical Ltd 2010
-# This file is distributed under the same license as the libmate-keyring package.
+# SOME DESCRIPTIVE TITLE.
+# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
+# This file is distributed under the same license as the PACKAGE package.
+# 
+# Translators:
 # FIRST AUTHOR <EMAIL@ADDRESS>, 2010.
-#
 msgid ""
 msgstr ""
-"Project-Id-Version: libmate-keyring\n"
-"Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
-"POT-Creation-Date: 2010-09-28 11:09+0000\n"
-"PO-Revision-Date: 2010-06-27 02:00+0000\n"
-"Last-Translator: Ubuntu-vi <ubuntu-l10n-vi@lists.launchpad.net>\n"
-"Language-Team: Vietnamese <vi@li.org>\n"
+"Project-Id-Version: MATE Desktop Environment\n"
+"Report-Msgid-Bugs-To: https://github.com/mate-desktop/\n"
+"POT-Creation-Date: 2012-06-28 16:07+0200\n"
+"PO-Revision-Date: 2012-02-22 14:49+0000\n"
+"Last-Translator: Stefano Karapetsas <stefano@karapetsas.com>\n"
+"Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2010-12-19 11:12+0000\n"
-"X-Generator: Launchpad (build Unknown)\n"
+"Language: vi\n"
+"Plural-Forms: nplurals=1; plural=0\n"
 
 #: ../library/mate-keyring-utils.c:100
 msgid "Access Denied"
@@ -50,6 +51,6 @@ msgid "The keyring has already been unlocked."
 msgstr "Vòng khoá đã được bỏ khoá."
 
 #. TRANSLATORS: This is the name of an automatically created default keyring.
-#: ../library/mate-keyring.c:2819
+#: ../library/mate-keyring.c:2790
 msgid "Default"
 msgstr "Default"
