--- a/po/zh_HK.po
+++ b/po/zh_HK.po
@@ -1,19 +1,22 @@
-# Chinese (Hong Kong) translation for libmate-keyring.
-# Copyright (C) 2010 libmate-keyring's COPYRIGHT HOLDER
-# This file is distributed under the same license as the libmate-keyring package.
+# SOME DESCRIPTIVE TITLE.
+# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
+# This file is distributed under the same license as the PACKAGE package.
+# 
+# Translators:
 # Zerng07 <pswo10680@gmail.com>, 2010.
-#
 msgid ""
 msgstr ""
-"Project-Id-Version: libmate-keyring 2.29.92\n"
-"Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2010-03-14 20:01+0800\n"
-"PO-Revision-Date: 2010-03-14 20:01+0800\n"
-"Last-Translator: Cheng-Chia Tseng <pswo10680@gmail.com>\n"
-"Language-Team: Chinese (Hong Kong) <community@linuxhall.org>\n"
+"Project-Id-Version: MATE Desktop Environment\n"
+"Report-Msgid-Bugs-To: https://github.com/mate-desktop/\n"
+"POT-Creation-Date: 2012-06-28 16:07+0200\n"
+"PO-Revision-Date: 2012-02-22 14:49+0000\n"
+"Last-Translator: Stefano Karapetsas <stefano@karapetsas.com>\n"
+"Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Language: zh_HK\n"
+"Plural-Forms: nplurals=1; plural=0\n"
 
 #: ../library/mate-keyring-utils.c:100
 msgid "Access Denied"
@@ -48,6 +51,6 @@ msgid "The keyring has already been unlocked."
 msgstr "這個密碼匙圈已經解開鎖定。"
 
 #. TRANSLATORS: This is the name of an automatically created default keyring.
-#: ../library/mate-keyring.c:2685
+#: ../library/mate-keyring.c:2790
 msgid "Default"
 msgstr "預設"
